$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-12-26 [D] Updated navigation of German docs {GauGau}
2009-12-25 [D] Added detailed explanations about permissions on folder level {GauGau}
2009-12-25 [O] Removed unneeded language string {GauGau}
2009-12-25 [C] Added coppermine style classes to installer {GauGau}
2009-12-25 [C] Added button icons to installer {GauGau}
2009-12-25 [C] Renamed install_old.php to install_classic.php {GauGau}
2009-12-22 [B] Turned "restore factory defaults" into a hidden option to avoid issues with IE6 (thread ID 62899) {GauGau}
2009-12-22 [D] Added install screen steps for the wizard {GauGau}
2009-12-21 [D] Added details to documentation navigation {GauGau}
2009-12-21 [C] Fixed some minor typos in docs {GauGau}
2009-12-17 [B] Fixed server side 404 errors when rating is disabled (thread ID 62747) {eenemeenemuu}
2009-12-17 [C] Fixed typo in inline CSS (thread ID 62885) {GauGau}
2009-12-11 [D] Added announcement icon {GauGau}
2009-12-11 [B] Fixed typo in Polish language file {eenemeenemuu}
2009-12-11 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
2009-12-11 [B] Preserve alpha channel in png thumbnails (thread ID 62286) {eenemeenemuu}
2009-12-11 [M] Updated version count from cpg1.5.2 to cpg1.5.3 to prepare the next release {GauGau}
2009-12-11 [O] Added coppermine globals to custom_include function to allow usage of those variables from within the custom header or footer files {GauGau} {Timo}
2009-12-10 [B] Added support for vertical filmstrip (thread ID 62740) {Timo}
2009-12-07 [C] Added loader.gif to image class (thread ID 62780) {Timo}