@@ -17,13 +17,17 @@
   $Date$
 **********************************************/
 
+global $lang_pluginmgr_php;
+
+$icon_array['config']  = cpg_fetch_icon('config', 2);
+
 $name = $lang_plugin_php['onlinestats_name'];
 $description = $lang_plugin_php['onlinestats_description'] . '&nbsp;' . cpg_display_help('f=plugins.htm&amp;as=plugin_bundled_onlinestats&amp;ae=plugin_bundled_onlinestats_end', '400', '200');
 $author = 'Originally created by <a href="http://coppermine-gallery.net/forum/index.php?action=profile;u=941" rel="external" class="external">Nibbler</a>, <acronym title="internationalization">i18n</acronym> by <a href="http://coppermine-gallery.net/forum/index.php?action=profile;u=9980" rel="external" class="external">Frantz</a>';
-$version = '2.3';
+$version = '2.4';
 $extra_info = <<< EOT
-	<a href="index.php?file=onlinestats/index&amp;action=configure" class="admin_menu">{$lang_pluginmgr_php['configure_plugin']}</a>&nbsp;
-	 {$lang_plugin_php['onlinestats_config_extra']}
+	<a href="index.php?file=onlinestats/index&amp;action=configure" class="admin_menu">{$icon_array['config']}{$lang_pluginmgr_php['configure_plugin']}</a><br />
+	{$lang_plugin_php['onlinestats_config_extra']}
 EOT;
 $install_info = $lang_plugin_php['onlinestats_config_install'];
 ?>
